# django-openid

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: CI.yml
project/: db.sqlite3
project/openid/: LoginBackend  authenticattion.py  backend.py  models.py  urls.py  views.py
project/openid/logic/: users.py
project/openid/migrations/: 0001_initial.py  0002_alter_user_email_alter_user_first_name_and_more.py  0003_alter_user_first_name_alter_user_last_name_and_more.py  0004_alter_user_username.py
project/openid/templates/: home.html  meta.json
project/project/: LoginBackend  settings.py  urls.py
