[tool.poetry]
name = "django-openid"
version = "0.1.0"
description = ""
authors = ["ellaverak <ella.korkeaaho@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
django = "^4.2.6"
authlib = "^1.2.1"
requests = "^2.31.0"
django-environ = "^0.11.2"
psycopg2 = "^2.9.9"
django-cryptography = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
